books.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
  labels:
    app: books
    stage: dev
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      stage: dev
      version: v1
  template:
    metadata:
      labels:
        app: books
        stage: dev
        version: v1
    spec:
      containers:
        - name: books
          image: books:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
              protocol: TCP
        - name: envoy
          image: books-envoy:v1
          volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9901
              protocol: TCP
      volumes:
        - name: envoy-config
          configMap:
            name: books-config-map
            items:
              - key: envoy-yaml-config
                path: envoy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  selector:
    app: books
    stage: dev
    version: v1
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
